Extracted conversion logic to functions. Worked on front end logic for picture cropping. Fixed a couple styling issues with buttons.

--- a/frontend/src/style/utils.css
+++ b/frontend/src/style/utils.css
@@ -15,7 +15,7 @@ form{
     gap: 15px;
 }
 
-button[type="submit"]{
+.submit-button {
     background-color:var(--accent);
     border:none;
     border-radius: 10px;
